--- a/software/usbMeter.ioc
+++ b/software/usbMeter.ioc
@@ -95,11 +95,12 @@ Dma.USART2_TX.4.SyncRequestNumber=1
 Dma.USART2_TX.4.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.I2C_Speed_Mode=I2C_Fast
+I2C1.I2C_Speed_Mode=I2C_Fast_Plus
 I2C1.IPParameters=Timing,I2C_Speed_Mode
-I2C1.Timing=0x00C12166
-I2C2.IPParameters=Timing
-I2C2.Timing=0x10B17DB5
+I2C1.Timing=0x00910B1C
+I2C2.I2C_Speed_Mode=I2C_Fast_Plus
+I2C2.IPParameters=Timing,I2C_Speed_Mode
+I2C2.Timing=0x00910B1C
 KeepUserPlacement=false
 Mcu.CPN=STM32G031G8U6
 Mcu.Family=STM32G0
@@ -247,7 +248,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_TIM17_Init-TIM17-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_TIM17_Init-TIM17-false-HAL-true,11-MX_TIM16_Init-TIM16-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APBFreq_Value=64000000
